paths to add serology and viruses
